--- a/contact.html
+++ b/contact.html
@@ -3,37 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact InnovexLab | Laboratory Contact Information</title>
-  <meta name="description" content="Contact InnovexLab in Gainesville, Florida for information about pathogen testing panels, ordering, and laboratory services.">
-  <link rel="canonical" href="https://innovexlab.com/contact.html">
+  <title>Contact InnovexLab | Gainesville Clinical Laboratory</title>
+  <meta name="description" content="Contact InnovexLab in Gainesville, FL for information about pathogen testing panels, ordering, and laboratory services.">
   <style>
     body {
       margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      color: #222;
-      line-height: 1.6;
-      background-color: #f7f9fc;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f7fb;
+      color: #333;
     }
 
     header {
       background-color: #0b2c4a;
-      color: #ffffff;
+      color: white;
       padding: 16px 32px;
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
     }
 
     header h1 {
-      font-size: 1.3rem;
       margin: 0;
-      letter-spacing: 0.03em;
+      font-size: 1.5rem;
     }
 
     nav a {
-      color: #ffffff;
+      color: white;
       text-decoration: none;
-      margin-left: 16px;
+      margin-left: 20px;
       font-size: 0.95rem;
       text-transform: uppercase;
     }
@@ -43,125 +40,99 @@
     }
 
     main {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 32px 16px 48px 16px;
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
     }
 
     h2 {
-      font-size: 1.9rem;
-      margin-bottom: 8px;
+      text-align: center;
       color: #0b2c4a;
+      font-size: 2rem;
+      margin-bottom: 10px;
     }
 
-    h3 {
-      font-size: 1.3rem;
-      margin-top: 24px;
-      margin-bottom: 6px;
-      color: #0b2c4a;
-    }
-
-    p {
-      margin: 0 0 12px;
-      font-size: 0.97rem;
+    p.center {
+      text-align: center;
+      max-width: 700px;
+      margin: 0 auto 30px;
+      font-size: 1rem;
     }
 
     .contact-box {
-      background-color: #ffffff;
+      background-color: white;
+      padding: 30px;
       border-radius: 8px;
-      padding: 20px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      border: 1px solid #e1e6ee;
-      margin-top: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      margin-bottom: 40px;
     }
 
     .contact-box p {
-      margin: 4px 0;
+      margin: 6px 0;
+      font-size: 1rem;
     }
 
     .contact-form {
-      background-color: #ffffff;
+      background-color: white;
+      padding: 30px;
       border-radius: 8px;
-      padding: 20px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      border: 1px solid #e1e6ee;
-      margin-top: 24px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
     label {
       display: block;
-      font-size: 0.9rem;
-      margin-bottom: 4px;
-      color: #333;
+      margin-bottom: 6px;
+      font-weight: bold;
+      color: #0b2c4a;
     }
 
     input[type="text"],
     input[type="email"],
     textarea {
       width: 100%;
-      padding: 8px;
-      margin-bottom: 12px;
+      padding: 10px;
+      margin-bottom: 16px;
       border-radius: 4px;
       border: 1px solid #cfd6e4;
-      font-size: 0.95rem;
+      font-size: 1rem;
       box-sizing: border-box;
     }
 
     textarea {
-      min-height: 120px;
+      min-height: 140px;
       resize: vertical;
     }
 
-    button[type="submit"] {
-      background-color: #00a6d6;
-      color: #ffffff;
-      border: 1px solid #00a6d6;
+    button {
+      background-color: #0077a8;
+      color: white;
+      border: none;
+      padding: 12px 20px;
+      font-size: 1rem;
       border-radius: 4px;
-      padding: 10px 18px;
-      font-size: 0.95rem;
       cursor: pointer;
+      font-weight: bold;
     }
 
-    button[type="submit"]:hover {
-      background-color: #0088af;
+    button:hover {
+      background-color: #005f86;
     }
 
     footer {
       background-color: #0b2c4a;
-      color: #ffffff;
-      padding: 16px 32px;
-      font-size: 0.85rem;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      gap: 8px;
-    }
-
-    footer a {
-      color: #ffffff;
-      text-decoration: none;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-    }
-
-    @media (max-width: 600px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      nav {
-        margin-top: 8px;
-      }
+      color: white;
+      text-align: center;
+      padding: 16px;
+      margin-top: 40px;
+      font-size: 0.9rem;
     }
   </style>
 </head>
+
 <body>
   <header>
     <h1>InnovexLab</h1>
-    <nav aria-label="Primary navigation">
+    <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
       <a href="contact.html">Contact</a>
@@ -169,55 +140,52 @@
   </header>
 
   <main>
-    <section aria-labelledby="contact-heading">
-      <h2 id="contact-heading">Contact InnovexLab</h2>
-      <p>
-        For information about our pathogen testing panels, ordering process, or general inquiries,
-        please use the contact details below or send us a message.
-      </p>
-      <div class="contact-box">
-        <p><strong>Email:</strong> <a href="mailto:info@innovex-lab.com">info@innovex-lab.com</a></p>
-        <p><strong>Phone:</strong> <a href="tel:+13523283066">(352) 328-3066</a></p>
-        <p><strong>Address:</strong><br>
-          InnovexLab<br>
-          1135 NW 23rd Ave, Ste L<br>
-          Gainesville, FL 32609
-        </p>
-      </div>
-    </section>
+    <h2>Contact InnovexLab</h2>
+    <p class="center">
+      For information about our diagnostic panels, ordering process, or laboratory services, please reach out using the form below or contact us directly.
+    </p>
 
-    <section aria-labelledby="message-heading" class="contact-form">
-      <h3 id="message-heading">Send us a message</h3>
-      <!--
-        This is a static HTML form. To make it functional, point the "action"
-        attribute to your form handler (e.g., an email service, backend, or form service).
-      -->
-      <form action="#" method="post">
+    <div class="contact-box">
+      <p><strong>Email:</strong> <a href="mailto:info@innovex-lab.com">info@innovex-lab.com</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+13523283066">(352) 328-3066</a></p>
+      <p><strong>Address:</strong><br>
+        InnovexLab<br>
+        1135 NW 23rd Ave, Ste L<br>
+        Gainesville, FL 32609
+      </p>
+    </div>
+
+    <div class="contact-form">
+      <h3 style="color:#0b2c4a; margin-top:0;">Send Us a Message</h3>
+
+      <form action="https://formsubmit.co/info@innovex-lab.com" method="POST">
+
+        <!-- Spam Protection -->
+        <input type="text" name="_honey" style="display:none">
+        <input type="hidden" name="_captcha" value="false">
+
+        <!-- Redirect After Submit -->
+        <input type="hidden" name="_next" value="https://innovexlab.com/thankyou.html">
+
         <label for="name">Name</label>
-        <input id="name" name="name" type="text" autocomplete="name">
+        <input id="name" name="name" type="text" required>
 
         <label for="email">Email</label>
-        <input id="email" name="email" type="email" autocomplete="email">
+        <input id="email" name="email" type="email" required>
 
         <label for="organization">Practice / Organization</label>
         <input id="organization" name="organization" type="text">
 
         <label for="message">Message</label>
-        <textarea id="message" name="message"></textarea>
+        <textarea id="message" name="message" required></textarea>
 
         <button type="submit">Submit</button>
       </form>
-    </section>
+    </div>
   </main>
 
   <footer>
-    <div>
-      © <span id="year"></span> InnovexLab. All rights reserved.
-    </div>
-    <div>
-      1135 NW 23rd Ave, Ste L, Gainesville, FL 32609 ·
-      <a href="tel:+13523283066">(352) 328-3066</a>
-    </div>
+    © <span id="year"></span> InnovexLab. All rights reserved.
   </footer>
 
   <script>
