--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>InnovexLab | Gainesville Clinical Pathogen Testing Laboratory</title>
-  <meta name="description" content="InnovexLab is a Gainesville-based clinical laboratory offering advanced pathogen testing panels including UTI, respiratory, STI, wound, GI, nail fungus, antibiotic resistance, and women’s health." />
+  <title>InnovexLab | Gainesville, Florida Clinical Pathogen Testing Laboratory</title>
+  <meta name="description" content="InnovexLab is a clinical laboratory located in Gainesville, Florida offering advanced pathogen testing panels including UTI, respiratory, STI, wound, GI, nail fungus, antibiotic resistance, and women’s health." />
   <link rel="canonical" href="https://innovexlab.com/" />
+
+  <!-- Structured Data for Local SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MedicalOrganization",
+    "name": "InnovexLab",
+    "url": "https://innovexlab.com",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "1135 NW 23rd Ave Ste L",
+      "addressLocality": "Gainesville",
+      "addressRegion": "FL",
+      "postalCode": "32609",
+      "addressCountry": "US"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+1-352-328-3066",
+      "contactType": "Customer Service"
+    }
+  }
+  </script>
+
   <style>
     body {
       margin: 0;
@@ -122,33 +146,20 @@
 
     .contact-box p {
       margin: 6px 0;
-      font-size: 0.95rem;
+      font-size: 1rem;
     }
 
     footer {
       background-color: #0b2c4a;
       color: white;
-      padding: 16px 32px;
       text-align: center;
-      font-size: 0.85rem;
-    }
-
-    @media (max-width: 600px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      nav {
-        margin-top: 8px;
-      }
-
-      .hero h2 {
-        font-size: 1.6rem;
-      }
+      padding: 16px;
+      margin-top: 40px;
+      font-size: 0.9rem;
     }
   </style>
 </head>
+
 <body>
   <header>
     <h1>InnovexLab</h1>
@@ -160,9 +171,9 @@
   </header>
 
   <section class="hero">
-    <h2>Advanced Pathogen Testing in Gainesville, FL</h2>
+    <h2>Advanced Pathogen Testing in Gainesville, Florida</h2>
     <p>
-      InnovexLab is a high-quality clinical laboratory specializing in molecular and microbiological testing for infectious diseases. Our Gainesville-based facility supports healthcare providers with accurate, timely results across a focused menu of diagnostic panels.
+      InnovexLab is a high-quality clinical laboratory located in Gainesville, Florida, specializing in molecular and microbiological testing for infectious diseases. We support healthcare providers with accurate, timely results across a focused menu of diagnostic panels.
     </p>
     <p>
       From urinary tract and respiratory infections to complex women’s health and antimicrobial resistance, InnovexLab delivers precision diagnostics with responsive service.
@@ -214,12 +225,4 @@
 
     <section class="contact-box">
       <h2 style="color:#0b2c4a;">Contact InnovexLab</h2>
-      <p><strong>Email:</strong> <a href="mailto:info@innovex-lab.com">info@innovex-lab.com</a></p>
-      <p><strong>Phone:</strong> <a href="tel:+13523283066">(352) 328-3066</a></p>
-      <p><strong>Address:</strong> 1135 NW 23rd Ave Ste L, Gainesville, FL 32609</p>
-      <p>Visit our <a href="contact.html">Contact page</a> for more details.</p>
-    </section>
-  </main>
-
-  <footer>
-    <p>© <span id="year"></span> InnovexLab. All rights
+      <p><strong>Email:</strong> <a href="mailto:info@innovex-lab.com">info@
