--- a/index.html
+++ b/index.html
@@ -6,30 +6,6 @@
   <title>InnovexLab | Gainesville, Florida Clinical Pathogen Testing Laboratory</title>
   <meta name="description" content="InnovexLab is a clinical laboratory located in Gainesville, Florida offering advanced pathogen testing panels including UTI, respiratory, STI, wound, GI, nail fungus, antibiotic resistance, and women’s health." />
   <link rel="canonical" href="https://innovexlab.com/" />
-
-  <!-- Structured Data for Local SEO -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MedicalOrganization",
-    "name": "InnovexLab",
-    "url": "https://innovexlab.com",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "1135 NW 23rd Ave Ste L",
-      "addressLocality": "Gainesville",
-      "addressRegion": "FL",
-      "postalCode": "32609",
-      "addressCountry": "US"
-    },
-    "contactPoint": {
-      "@type": "ContactPoint",
-      "telephone": "+1-352-328-3066",
-      "contactType": "Customer Service"
-    }
-  }
-  </script>
-
   <style>
     body {
       margin: 0;
@@ -65,9 +41,7 @@
     }
 
     .hero {
-      background-image: url('hero-bg.png'); /* Use your generated image */
-      background-size: cover;
-      background-position: center;
+      background: linear-gradient(to right, #0b2c4a, #0077a8);
       color: white;
       padding: 60px 20px;
       text-align: center;
@@ -117,7 +91,6 @@
       padding: 20px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       transition: transform 0.2s ease;
-      cursor: pointer;
     }
 
     .panel-card:hover {
@@ -135,33 +108,17 @@
       margin-bottom: 0;
     }
 
-    /* Modal Styling */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0,0,0,0.6);
-    }
-
-    .modal-content {
+    .contact-box {
       background-color: white;
-      margin: 10% auto;
-      padding: 20px;
       border-radius: 8px;
-      width: 90%;
-      max-width: 600px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      padding: 20px;
+      margin-top: 40px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
-    .close {
-      float: right;
-      font-size: 24px;
-      cursor: pointer;
+    .contact-box p {
+      margin: 6px 0;
+      font-size: 1rem;
     }
 
     footer {
@@ -170,4 +127,98 @@
       text-align: center;
       padding: 16px;
       margin-top: 40px;
-      font-size: 0.9rem
+      font-size: 0.9rem;
+    }
+
+    a[href^="mailto:"] {
+      color: #0077a8;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    a[href^="mailto:"]:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <h1><a href="index.html">InnovexLab</a></h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About Us</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <h2>Advanced Pathogen Testing in Gainesville, Florida</h2>
+    <p>
+      InnovexLab is a high-quality clinical laboratory located in Gainesville, Florida, specializing in molecular and microbiological testing for infectious diseases. We support healthcare providers with accurate, timely results across a focused menu of diagnostic panels.
+    </p>
+    <p>
+      From urinary tract and respiratory infections to complex women’s health and antimicrobial resistance, InnovexLab delivers precision diagnostics with responsive service.
+    </p>
+    <div class="cta">
+      <a href="#panels">View Panels</a>
+      <a href="contact.html">Contact Us</a>
+    </div>
+  </section>
+
+  <main>
+    <section id="panels">
+      <h2 style="text-align:center; color:#0b2c4a;">Our Diagnostic Panels</h2>
+      <div class="panels">
+        <div class="panel-card">
+          <h3>UTI Panel</h3>
+          <p>Molecular detection of uropathogens including <em>E. coli</em>, <em>Klebsiella</em>, and <em>Enterococcus</em>.</p>
+        </div>
+        <div class="panel-card">
+          <h3>Respiratory Panel</h3>
+          <p>Screening for viral and bacterial respiratory pathogens including <em>Influenza A/B</em>, <em>RSV</em>, and <em>Mycoplasma pneumoniae</em>.</p>
+        </div>
+        <div class="panel-card">
+          <h3>STI Panel</h3>
+          <p>NAAT-based detection of <em>Chlamydia trachomatis</em>, <em>Neisseria gonorrhoeae</em>, and <em>Trichomonas vaginalis</em>.</p>
+        </div>
+        <div class="panel-card">
+          <h3>Wound Panel</h3>
+          <p>Identification of aerobic and anaerobic bacteria including MRSA and <em>Pseudomonas aeruginosa</em>.</p>
+        </div>
+        <div class="panel-card">
+          <h3>GI Panel</h3>
+          <p>Detection of enteric pathogens such as <em>Salmonella</em>, <em>Shigella</em>, and <em>Clostridioides difficile</em>.</p>
+        </div>
+        <div class="panel-card">
+          <h3>Nail Fungus Panel</h3>
+          <p>PCR-based detection of dermatophytes including <em>Trichophyton rubrum</em> and <em>Candida</em> species.</p>
+        </div>
+        <div class="panel-card">
+          <h3>Antibiotic Resistance Panel</h3>
+          <p>Screening for resistance genes including ESBL, carbapenemase, and MRSA markers.</p>
+        </div>
+        <div class="panel-card">
+          <h3>Women’s Health Panel</h3>
+          <p>Vaginal microbiome assessment including <em>Gardnerella vaginalis</em>, <em>Atopobium vaginae</em>, and <em>Candida</em> species.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact-box">
+      <h2 style="color:#0b2c4a;">Contact InnovexLab</h2>
+      <p><strong>Email:</strong> <a href="mailto:info@innovex-lab.com">info@innovex-lab.com</a></p>
+      <p><strong>Phone:</strong> <a href="tel:+13523283066">(352) 328-3066</a></p>
+      <p><strong>Address:</strong> 1135 NW 23rd Ave Ste L, Gainesville, FL 32609</p>
+    </section>
+  </main>
+
+  <footer>
+    © <span id="year"></span> InnovexLab. All rights reserved.
+  </footer>
+
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
